Fix menu overlap

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ html {
 }
 #themes-list li {
     float: left;
-    margin: 0 auto 0 20px;
+    padding: 0 20px;
+/*    margin: 0 auto 0 0;*/
     font-size: 25px;
 }
 
@@ -315,14 +316,16 @@ svg {
 .ml1 .line2 {
     bottom: 0;
 }
-
-.menu {
+.Wmenu {
     position: fixed;
+    z-index: 1000;
+}
+.menu {
+    position: absolute;
     top: 20px;
     left: 20px;
     height: 46px;
     width: 46px;
-    z-index: 1003;
 }
 
 .menu-circle {
@@ -332,7 +335,6 @@ svg {
     position: absolute;
     border-radius: 50%;
     transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
-    z-index: 1000;
 }
 
 .menu:hover .menu-circle {
@@ -410,7 +412,7 @@ svg {
     justify-content: center;
     align-items: center;
     transition: opacity 0.2s ease-in-out;
-    z-index: 1001;
+/*    z-index: 1000;*/
 }
 
 .menu-overlay.open {
@@ -418,7 +420,6 @@ svg {
     visibility: visible;
     transition-delay: 0.03s;
 }
-
 .menu-overlay a {
     font-size: 2.5rem;
     color: grey;
